# code-design

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.cargo/: config.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/prompts/: codex-pr-review.md  issue-auto-response.md
.github/scripts/: check-action-node24.mjs
.github/workflows/: ci.yml  codeql.yml  codex-pr-review.yml  dependency-review.yml  issue-auto-response.yml  release.yml  scorecard.yml
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  COLLABORATION.md  CONFIG.md  DIFFERENTIATION.md  DIFFERENTIATION.zh.md  PRINCIPLES.md  PRINCIPLES.zh.md  RESEARCH_QUEUE.md  RESEARCH_QUEUE.zh.md  ROADMAP.md  VISION.md
docs/research/: 01-claude-design-teardown.md  02-inline-comment-and-sliders.md  03-sandbox-runtime.md  04-pptx-export.md  05-pi-ai-boundary.md  06-api-onboarding-ux.md  07-first-5-minutes.md  08-seo-ai-seo.md  09-polish-parity-backlog.md
