[package]
name = "open-design"
version = "0.0.0"
description = "Tauri desktop wrapper for open-design"
authors = ["open-design contributors"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "open_design_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
